style: add z-index to fixed navbar for better layering

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ html {
   height: 10vh;
   position: fixed;
   width: 100%;
+  z-index: 1000;
 }
 
 .navbar div {
@@ -158,4 +159,56 @@ html {
 .button:hover {
   background-color: var(--color-quinary);
   transform: scale(1.05);
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-quaternary);
+  padding: 10vh 0;
+  height: 100vh;
+  position: relative;
+}
+
+.contact h2 {
+  font-size: var(--font-size-xlarge);
+  color: var(--color-quinary);
+  padding: 2rem;
+}
+
+.contact p {
+  font-size: var(--font-size-large);
+  color: var(--color-secondary);
+  padding: 2rem;
+  text-align: center;
+}
+
+.contact a {
+  font-size: var(--font-size-medium);
+  color: var(--color-quinary);
+  text-decoration: none;
+  transition: all 0.3s;
+  background-color: var(--color-primary);
+}
+
+.contact a:hover {
+  background-color: var(--color-tertiary);
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-quinary);
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
+.footer p {
+  font-size: var(--font-size-small);
+  color: var(--color-white);
+  padding: 1rem;
 }
